<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">iJob</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="textView_hint_company_type">性质</string>
    <string name="textView_hint_workplace">地区</string>
    <string name="textView_hint_jobneed">岗位描述</string>
    <string name="onlineprofile">线上简历</string>
    <string name="offlineprofile">我的简历</string>
    <string name="inputhint">地区，职位</string>
    <string name="menu_settings">设置</string>
    <string name="search_hint">地区，职位</string>
    <string name="search_title">Search</string>
    <string name="submit">保存</string>
    <string name="upload">上传</string>
    <string name="availableCity"></string>
    <string name="title_activity_city_select">CitySelectActivity</string>
    <string name="title_activity_set_follow">SetFollowActivity</string>
    <string name="menu_mainscene">关注信息</string>
    <string name="menu_personal">个人中心</string>
    <string name="menu_server">百宝箱</string>
    <string name="menu_version">版本更新</string>
    <string name="menu_request">问题反馈</string>
    <string name="menu_aboutus">关        于</string>
    <string name="menu_exit">退出</string>
    <string name="collect">收        藏</string>
    <string name="profile">已投简历</string>
    <string name="setfocus">关注设置</string>
    <string name="havask">简历投递</string>
    <string name="focusnews">最新信息</string>
    <string name="exit_hint">您确定要退出么？</string>
    <string name="delete_hint">您确定要删除该项么？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="submitProfile">投简历</string>
    <string name="clearCollection">清除全部</string>
    <string name="followCity">关注城市</string>
    <string name="followPost">关注职位</string>
    <string name="functionshow">iJob是一款校园招聘信息推送的APP。</string>
    <string-array name="about_item">
        <item>功能介绍</item>
        <item>版本更新</item>
        <item>问题反馈</item>
    </string-array>
    <string name="ijob_studio">中山大学软件学院iJob团队</string>
    <string name="ijob_Email">E-mail:1263096028@qq.com</string>
    <string name="ijob_Tel">Tel:13580506237</string>
    <string name="copy_right">Copyright©2014 iJob Studio. ALL Rights Reserved.</string>
    <string name="current_version">当前版本</string>
    <string name="lastest_version">最新版本</string>
    <string name="update">下载最新版本</string>
    <string-array name="city_name">
        <item>北京</item>
        <item>上海</item>
        <item>南京</item>
        <item>武汉</item>
        <item>杭州</item>
        <item>广州</item>
        <item>深圳</item>
        <item>珠海</item>
        <item>香港</item>
    </string-array>
    <string-array name="job_id_name">
        <item>销售|客服|市场</item>
        <item>财务|人力资源|行政</item>
        <item>项目|质量|高级管理</item>
        <item>IT|互联网|通信</item>
        <item>房产|建筑|物业管理</item>
        <item>金融</item>
        <item>采购|贸易|交通|物流</item>
        <item>生产制造</item>
        <item>咨询|法律|教育|翻译</item>
        <item>传媒|印刷|艺术|设计</item>
        <item>服务业</item>
        <item>兼职|实习|社工|其他</item>
        <item>能源|环保|农业|科研</item>
    </string-array>
    <string-array name="job_type11_name">
        <item>销售业务</item>
        <item>销售代表</item>
        <item>客户代表</item>
        <item>销售工程师</item>
        <item>渠道/分销专员</item>
        <item>区域销售专员/助理</item>
        <item>业务拓展专员/助理</item>
        <item>大客户销售代表</item>
        <item>电话销售</item>
        <item>网络/在线销售</item>
        <item>团购业务员</item>
        <item>销售业务跟单</item>
        <item>医药代表</item>
        <item>其他</item>
        <item>销售管理</item>
        <item>销售总监</item>
        <item>销售经理</item>
        <item>销售主管</item>
        <item>客户总监</item>
        <item>客户经理</item>
        <item>客户主管</item>
        <item>渠道/分销总监</item>
        <item>渠道/分销经理/主管</item>
        <item>区域销售总监/主管</item>
        <item>区域销售经理/主管</item>
        <item>业务拓展经理</item>
        <item>大客户销售经理</item>
        <item>团购经理/主管</item>
        <item>医药销售经理/主管</item>
        <item>其他</item>
        <item>销售行政</item>
        <item>客服/售前/售后技术支持</item>
        <item>市场</item>
        <item>公关/媒介</item>
        <item>广告/会展</item>
    </string-array>
    <string-array name="job_type12_name">
        <item>财务/审计/税务</item>
        <item>人力资源</item>
        <item>行政/后勤/文秘</item>
    </string-array>
    <string-array name="job_type13_name">
        <item>项目管理/项目协调</item>
        <item>质量管理/安全防护</item>
        <item>高级管理</item>
    </string-array>
    <string-array name="job_type14_name">
        <item>软件/互联网开发/系统集成</item>
        <item>高级软件工程师</item>
        <item>软件工程师</item>
        <item>软件研发工程师</item>
        <item>需求工程师</item>
        <item>系统架构设计师</item>
        <item>系统分析员</item>
        <item>数据库开发工程师</item>
        <item>ERP技术/开发应用</item>
        <item>互联网软件工程师</item>
        <item>手机软件开发工程师</item>
        <item>嵌入式软件开发</item>
        <item>移动互联网开发</item>
        <item>WEB前端开发</item>
        <item>语音/视频/图形开发</item>
        <item>用户界面(UI)设计</item>
        <item>UE/UX设计</item>
        <item>网页设计/制作/美工</item>
        <item>游戏设计/开发</item>
        <item>游戏策划</item>
        <item>游戏界面设计</item>
        <item>系统集成工程师</item>
        <item>其他</item>
        <item>硬件开发</item>
        <item>高级硬件工程师</item>
        <item>硬件工程师</item>
        <item>嵌入式硬件开发</item>
        <item>其他</item>
        <item>互联网产品/运营管理</item>
        <item>互联网产品经理/主管</item>
        <item>互联网产品专员/助理</item>
        <item>电子商务经理/主管</item>
        <item>电子商务专员/助理</item>
        <item>网络运营管理</item>
        <item>网络运营专员/助理</item>
        <item>网站编辑</item>
        <item>SEO/SEM</item>
        <item>其他</item>
        <item>IT质量管理/测试/配置管理</item>
        <item>IT质量管理经理/主管</item>
        <item>IT质量管理工程师</item>
        <item>系统测试</item>
        <item>软件测试</item>
        <item>硬件测试</item>
        <item>配置管理工程师</item>
        <item>信息技术标准化工程师</item>
        <item>其他</item>
        <item>IT运维/技术支持</item>
        <item>信息技术管理经理/主管</item>
        <item>信息技术专员</item>
        <item>IT技术支持/维护经理</item>
        <item>IT技术支持工程师</item>
        <item>系统工程师</item>
        <item>系统管理员</item>
        <item>网络工程师</item>
        <item>网络管理员</item>
        <item>网络与信息安全工程师</item>
        <item>数据库管理员</item>
        <item>计算机硬件维护工程师</item>
        <item>ERP实施顾问</item>
        <item>IT技术文员/助理</item>
        <item>IT文档工程师</item>
        <item>Helpdesk</item>
        <item>其他</item>
        <item>IT管理/项目协调</item>
        <item>CTO/CIO</item>
        <item>IT技术/技术总监</item>
        <item>IT技术/研发经理/主管</item>
        <item>IT项目总监</item>
        <item>IT项目执行/协调人员</item>
        <item>其他</item>
        <item>电信/通信技术开发及应用</item>
        <item>通信技术工程师</item>
        <item>通信研发工程师</item>
        <item>数据通信工程师</item>
        <item>移动通信工程师</item>
        <item>电信网络工程师</item>
        <item>电信交换工程师</item>
        <item>有线传输工程师</item>
        <item>无线/射频通信工程师</item>
        <item>通信电源工程师</item>
        <item>通信标准化工程师</item>
        <item>通信项目管理</item>
        <item>其他</item>
    </string-array>
    <string-array name="job_type15_name">
        <item>房地产开发/经纪/中介</item>
        <item>土木/建筑/装修/市政工程</item>
        <item>物业管理</item>
    </string-array>
    <string-array name="job_type16_name">
        <item>银行</item>
        <item>证券/期货/投资管理/服务</item>
        <item>保险</item>
        <item>信托/担保/拍卖</item>
    </string-array>
    <string-array name="job_type17_name">
        <item>采购/贸易</item>
        <item>交通运输服务</item>
        <item>物流仓储</item>
    </string-array>
    <string-array name="job_type18_name">
        <item>生产管理/运营</item>
        <item>电子/电器/仪器仪表</item>
        <item>汽车制造</item>
        <item>汽车销售</item>
        <item>汽车销售与服务</item>
        <item>机械设计/制造/维修</item>
        <item>服装/纺织/皮革设计/生产</item>
        <item>技工/操作工</item>
        <item>生物/制药/医疗器械</item>
        <item>化工</item>
    </string-array>
    <string-array name="job_type19_name">
        <item>影视/媒体/出版/印刷</item>
        <item>艺术/设计</item>
    </string-array>
    <string-array name="job_type20_name">
        <item>咨询|顾问|调研|数据分析</item>
        <item>教育/培训</item>
        <item>律师/法务/合规</item>
        <item>翻译(口译与笔译)</item>
    </string-array>
    <string-array name="job_type21_name">
        <item>商超/酒店/娱乐管理/服务</item>
        <item>旅游/度假/出入境服务</item>
        <item>烹饪/料理/食品研发</item>
        <item>保健/美容/美发/健身</item>
        <item>医院/医疗/护理</item>
        <item>社区/居民/家政服务</item>
    </string-array>
    <string-array name="job_type22_name">
        <item>能源/矿产/地质勘查</item>
        <item>环境科学/环保</item>
        <item>农/林/牧/渔业</item>
        <item>公务员/事业单位/科研机构</item>
    </string-array>
    <string-array name="job_type23_name">
        <item>实习生/培训生/储备干部</item>
        <item>志愿者/社会工作者</item>
        <item>兼职/临时</item>
        <item>其他</item>
    </string-array>
    <string-array name="serverTitle">
        <item name="skills">面试技巧</item>
        <item name="character">性格测试</item>
        <item name="wage">薪资查询</item>
    </string-array>
    <string-array name="skillsTitle">
        <item>技巧一：自我介绍不超2分钟</item>
        <item>技巧二：强调温馨和睦的家庭氛围</item>
        <item>技巧三：用乐群性 爱好点缀形象</item>
        <item>技巧四：不忘本令考官难忘</item>
        <item>技巧五：座右铭与应聘行业相关</item>
        <item>技巧六：说与工作“无关紧要”的缺点</item>
        <item>技巧七：尽量回避待遇问题</item>
        <item>技巧八：遇到提问陷阱采用迂回战术</item>
        <item>技巧九：回避回答对上级具体的希望</item>
        <item>技巧十：尽量体现机智、果敢和敬业</item>
    </string-array>
    <string-array name="skillsDetails">
        <item>   “请你自我介绍一下”这道题90%以上的用人单位都会问，面试者事先最好以文字的形式写好背熟。其实面试者的基本情况用人单位已掌握，考这道题的目的是考核面试者的语言表达能力、逻辑能力、以及诚信度。所以，面试者在自我介绍的内容要与个人简历相一致，表述方式上尽量采用口语化，注意内容简洁，切中要害，不谈无关、无用的内容，条理要清晰，层次要分明。自我介绍不能超过2分钟，最好把握在1分钟左右。</item>
        <item>   “谈谈你的家庭情况”此类问题70%的用人单位都会涉及，面试者应简单地介绍家人，一般只需介绍父母，如果亲属和应聘的行业有关系的也可介绍。回答时注意强调温馨和睦的家庭氛围，父母对自己教育方面的重视，各位家庭成员的良好状况，以及家庭成员对自己工作的支持和自己对家庭的责任感。</item>
        <item>   “谈谈你的业余爱好”是合资企业、民企乐于问这道题，因为企业主要想通过此题了解面试者的性格是否开朗，是否具有团队精神。所以面试者千万不要说自己没有业余爱好，也不要说自己有那些庸俗的、令人感觉不好的爱好。谈爱好时最好不要说自己仅限于读书、听音乐、上网等一个人做的事，这样可能会令面试官怀疑应聘者性格孤僻，最好能有一些如篮球、羽毛球等，在户外和大家一起做的业余爱好来“点缀”自己的形象，突出面视者的乐群性和协作能力。</item>
        <item>   “你最崇拜谁?”是近两年用人单位爱考的一道题。面试者回答时，不宜说自己谁都不崇拜，或者说崇拜自己，也最好不要说崇拜一个虚幻的、或者不知名的人，更不能崇拜一个明显具有负面形象的人。面试者所崇拜的人最好与自己所应聘的工作能“搭”上关系，说明自己所崇拜的人的哪些品质、哪些思想感染着自己、鼓舞着自己。</item>
        <item>   通过提问座右铭用人单位就可以判断面试者是否具有发展前途。面试者不要说那些易引起不好联想的座右铭，也不应说那些太抽象的座右铭，更不宜说太长的座右铭。座右铭最好能反映出自己某种优秀品质，或者和本专业、本行业相关的一句话，比如“只为成功找方法，不为失败找借口”。</item>
        <item>   当考官问到你的缺点时，面试者不能说自己没缺点，也不能把那些明显的优点说成缺点，但更不能挑严重影响所应聘工作的缺点，或者说令人不放心、不舒服的缺点。可以说出一些对于所应聘工作“无关紧要”的缺点，甚至是一些表面上看是缺点，从工作的角度看却是优点的缺点。</item>
        <item>   考官问到“你为什么选择我们公司?”时就试图从此题中了解面试者求职的动机、愿望以及对此项工作的态度，面试者最好不要说太多待遇好等，可以说“我十分看好贵公司所在的行业，我认为贵公司十分重视人才，而且这项工作很适合我，相信自己一定能做好。</item>
        <item>   如果我录用你，你将怎样开展工作”这是一道陷阱题，如果应聘者对于应聘的职位缺乏足够的了解，最好不要直接说出自己开展工作的具体办法，以免引起不良的效果。面试者可以尝试采用迂回战术来回答，如“首先听取领导的指示和要求，然后就有关情况进行了解和熟悉，接下来制定一份近期的工作计划并报领导批准，最后根据计划开展工作。</item>
        <item>   你希望与什么样的上级共事?”通过面试者对上级的“希望”可以判断出面试者对自我要求的意识，这既是一个陷阱，又是一次机会。面试者要好好把握此机会，最好回避对上级具体的希望，多谈对自己的要求，如“做为刚步入社会新人，我应该多要求自己尽快熟悉环境、适应环境，而不应该对环境提出什么要求，只要能发挥我的专长就可以了。</item>
        <item>   你是应届毕业生，缺乏经验，如何能胜任这项工作?”此题的回答应体现出面试者的诚恳、机智、果敢及敬业。如“作为应届毕业生，在工作经验方面的确会有所欠缺，因此在读书期间我一直利用各种机会在这个行业里做兼职。我也发现，实际工作远比书本知识丰富、复杂。但我有较强的责任心、适应能力和学习能力，而且比较勤奋，所以在兼职中均能圆满完成各项工作，从中获取的经验也令我受益匪浅。请贵公司放心，学校所学及兼职的工作经验使我一定能胜任这个职位。</item>
    </string-array>
    <string name="button_state1">开始测试</string>
    <string name="button_state2">下一题</string>
    <string name="button_state3">完成测试</string>
    <string name="hint_title">温馨提示</string>
    <string name="hint_text1">	1、问卷选项没有“对”与“错”之分。请选择你是怎样做的，而不是选择你认为哪样更好。</string>
    <string name="hint_text2">	2、测试的目的是反映最真实的自己。请最大程度放松下来，选择更接近你平时的感受或行为的那项。</string>
</resources>