<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <Preference
	    android:key="a"
        android:title="@string/menu_mainscene"
        android:icon="@drawable/home"
	    />
    <Preference android:icon="@drawable/personal2" 
        android:key="b"
        
        android:title="@string/menu_personal" />
    
     
     
    <Preference
        android:key="c"
        android:title="@string/menu_server"
        android:icon="@drawable/helpserver"
        />

    <Preference
        android:key="d"
        android:title="@string/menu_aboutus"
        android:icon="@drawable/about"
        />
    
   <Preference
        android:key="e"
        android:title="@string/menu_exit"
        android:icon="@drawable/exit"
        />
</PreferenceScreen>
   
 