<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:layout_margin="15dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/MBTI_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25dp"
        android:text="@string/hint_title" />

    <TextView
        android:id="@+id/MBTI_hint1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/hint_text1" />

    <TextView
        android:id="@+id/MBTI_hint2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/hint_text2" />

    <TextView
        android:id="@+id/MBTI_question"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textSize="22dp"
        android:text="TextView" />

    <RadioButton
        android:id="@+id/MBTI_radioButton1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="RadioButton" />

    <RadioButton
        android:id="@+id/MBTI_radioButton2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textSize="20dp"
        android:text="RadioButton" />

    <Button
        android:id="@+id/MBTI_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:text="@string/button_state1" />

</LinearLayout>