<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/new_textView2"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/now_textView1"
        android:layout_alignRight="@+id/now_textView1"
        android:layout_below="@+id/now_textView1"
        android:gravity="center"
        android:textColor="#ff0000"
        android:text=""
        android:textSize="20dp" />

    <TextView
        android:id="@+id/now_textView1"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/update_button1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text=""
        android:textSize="20dp" />

    <Button
        android:id="@+id/update_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_textView2"
        android:layout_centerHorizontal="true"
        android:background="#6699cc"
        android:text="@string/update" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/textView3"
        android:layout_toLeftOf="@+id/new_textView2"
        android:gravity="right|center"
        android:text="@string/lastest_version" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignTop="@+id/now_textView1"
        android:gravity="right|center"
        android:text="@string/current_version" />

</RelativeLayout>